<resources>
    <string name="app_name">Movies App</string>
    <string name="back">Back</string>
    <string name="avengers_end_game">Avengers:\nEnd Game</string>
    <string name="age">13+</string>
    <string name="tag_text">Action, Adventure, Fantasy</string>
    <string name="reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>
</resources>